--- a/notebooks/mavg feature.ipynb
+++ b/notebooks/mavg feature.ipynb
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7f3025d860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa9851dbb70>"
       ]
      },
      "execution_count": 5,
